--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,7 +42,7 @@
                             <label for="email">Email:</label>
                             <input type="email" id="email" name="email" required>
 
-                            <label for="purpose">PURPOSE OF INQUIRY:</label>
+                            <label>PURPOSE OF INQUIRY:</label>
                             <div>
                               <input type="radio" id="general" name="purpose" value="General Inquiry">
                               <label for="general">General Inquiry</label>
@@ -69,8 +69,8 @@
                 <!-- Contact Information -->
                 <div class="company-info">
                     <h2>Company Information</h2>
-                    <p><strong>Address:</strong> 30 Jubril Fasanya St, Lekki, ID 23402</address>
-                    <p><strong>Phone:</strong> (234)-803-837-3366</p>
+                    <p><strong>Address:</strong> 30 Jubril Fasanya St, Lekki, ID 23402 </p>
+                    <p><strong>Phone:</strong> (234)-803-837-3366 </p>
                     <p><strong>Email:</strong> enquiry@waterrafting.org</p>
                     <div class="map">
                         <!-- Embed Google Map here -->
