--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -84,6 +84,9 @@
 
     </main>
     <footer>
+        <a href="wireframe.html">
+            <img src="" alt="">
+        </a>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
