--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,11 +32,11 @@
     <main>
 
         <section class="hero">
-            <div class="hero">
-                <h1>WHITE WATER RAFTING</h1>
-                <div class="inner_div">
-                    <img src="images/hero.jpg" alt="Rafting Adventure">
-                    <h2>Experience the Thrill of White Water Rafting</h2>
+            <div class="hero"></div>
+            <h1>WHITE WATER RAFTING</h1>
+            <div class="inner_div">
+                <img src="images/hero.jpg" alt="Rafting Adventure">
+                <h2>Experience the Thrill of White Water Rafting</h2>
             </div>
         </section>
 
