--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | White Water Rafting </title>
+    <title>Home | White Water Rafting </title>
     <meta name="description"
         content="This Comapany is a recreation outfit saddle the responsibilty of total well being through various water games, exercise and relaxation with you, your family and friends. it is also the the best place for groups and Comapany hangout">
     <meta name="author" content="OJO Israel">
@@ -51,7 +51,7 @@
 
         <section class="contact">
             <p>Ready for an adventure? Check out our amazing trips!</p>
-            <a href="trips.html" class="contact-button">Explore Trips</a>
+            <a href="trips.html" class="contact">Explore Trips</a>
         </section>
 
         <section class="about-grid">
@@ -66,7 +66,6 @@
         </section>
     </main>
     <footer>
-        <a href="wireframe.html">View Wireframe</a>
 
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
         <nav class="sociallinks">
