--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | White Water Rafting </title>
+    <title>Our Trips | White Water Rafting </title>
     <meta name="description"
-        content="This Comapany is a recreation outfit saddle the responsibilty of total well being through various water games, exercise and relaxation with you, your family and friends. it is also the the best place for groups and Comapany hangout">
+        content="Our Comapany is a recreation outfit that is responsibie for total well being through various water games, exercise and relaxation with you, your family and friends. it is also the the best place for groups and Comapany hangout">
     <meta name="author" content="OJO Israel">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -84,9 +84,7 @@
 
     </main>
     <footer>
-        <a href="wireframe.html">
-            <img src="" alt="">
-        </a>
+        <a href="wireframe.html">View Wireframe</a>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
