--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -102,7 +102,6 @@
     </main>
     <footer>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
-        <a href="https://app.moqups.com/9dkl0VdWw0TBiNSmXT9TiC7OlmIA70yg/view/page/a9d7706ef">Wireframe</a>
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/Facebook.jpg" alt="Facebook">
